--- a/src/app/partials/panelHeader.html
+++ b/src/app/partials/panelHeader.html
@@ -22,7 +22,7 @@
         </span>
 
         <span class="extra row-button" ng-show="panel.editable != false">
-            <span confirm-click="row.panels = _.without(row.panels,panel)" 'confirmation="Are you sure you want to remove this {{panel.type}} panel?" class="pointer">
+            <span confirm-click="row.panels = _.without(row.panels,panel)" confirmation="Are you sure you want to remove this {{panel.type}} panel?" class="pointer">
                 <a title="Remove" alt="Remove" href="" class="icon-remove pointer" bs-tooltip="'Remove'"></a>
             </span>
         </span>
