--- a/src/app/panels/docviewer/module.html
+++ b/src/app/panels/docviewer/module.html
@@ -12,7 +12,7 @@
     <div class="col-md-1">
       <i class="icon-arrow-left icon-2x pointer" ng-show="docIndex > 0" ng-click="prevDoc()"></i>
     </div>
-    <div class="class="col-md-10">
+    <div class="col-md-10">
       <h4>Title</h4>
       <p ng-bind-html="panel.docTitle"></p>
       <h4>Content</h4>
