--- a/src/app/partials/dashboard.html
+++ b/src/app/partials/dashboard.html
@@ -43,6 +43,11 @@
                         class="col-md-{{panel.span}} nospace" style="min-height:{{row.height}};"
                         data-drop="true" ng-model="row.panels" data-jqyoui-options
                         jqyoui-droppable="{index:$index,mutate:false,onDrop:'panelMoveDrop',onOver:'panelMoveOver(true)',onOut:'panelMoveOut'}">
+                        <!-- Error Panel -->
+                        <div class="alert alert-danger panel-error" ng-hide="!panel.error">
+                            <a class="close" ng-click="panel.error=false">&times;</a>
+                            <i class="icon-exclamation-sign"></i> <strong>Oops!</strong> {{panel.error}}
+                        </div>
                         <!-- Content Panel -->
                         <div ng-class="{'dragInProgress':dashboard.panelDragging}">
                             <kibana-panel type="panel.type" ng-cloak></kibana-panel>
