Adjusting panel header controls

--- a/src/app/partials/panelHeader.html
+++ b/src/app/partials/panelHeader.html
@@ -1,50 +1,49 @@
-<div class="panel-heading">
-
-        <span class="extra row-button" ng-hide="panel.draggable == false">
-            <span class="row-text pointer" bs-tooltip="'Drag here to move'" data-drag=true
-                data-jqyoui-options="{revert: 'invalid',helper:'clone'}"
-                jqyoui-draggable="{
-                    animate:false,
-                    mutate:false,
-                    index:{{$index}},
-                    onStart:'panelMoveStart',
-                    onStop:'panelMoveStop'
-                    }" ng-model="row.panels">{{panel.type}}
+<div class="panel-heading clearfix">
+    <span class="row-text panel-title pull-left" ng-show="panel.title">
+        {{panel.title}}
+    </span>
+    <div class="button-group pull-right">
+        <span ng-show="panelMeta.loading == true">
+            <span>
+                <i class="icon-spinner icon-spin icon-large"></i>
             </span>
         </span>
-        <span class="extra row-button" ng-show="panel.draggable == false">
+        
+        <span ng-show="panel.draggable == false">
             <span class="row-text">{{panel.type}}</span>
         </span>
 
-        <span class="extra row-button" ng-show="panel.editable != false">
+        <span ng-show="panel.editable != false">
             <span confirm-click="row.panels = _.without(row.panels,panel)" confirmation="Are you sure you want to remove this {{panel.type}} panel?" class="pointer">
-                <a title="Remove" alt="Remove" href="" class="icon-remove pointer" bs-tooltip="'Remove'"></a>
+                <a title="Remove" alt="Remove" href="" class="icon-remove pointer btn btn-default btn-sm" bs-tooltip="'Remove'"></a>
             </span>
         </span>
 
-        <span class="row-button extra" ng-show="panel.editable != false">
+        <span ng-show="panel.editable != false">
             <span bs-modal="modal" data-container="body" data-template-url="app/partials/paneleditor.html" class="pointer">
-                <a title="Configure" alt="Configure" href="" class="icon-cog pointer"
+                <a title="Configure" alt="Configure" href="" class="icon-cog pointer btn btn-default btn-sm"
                     bs-tooltip="'Configure'"></a></span>
         </span>
 
-        <span class="row-button extra" ng-show="panel.transpose_show != undefined && !transpose_show">
-            <a ng-click="flip()" bs-tooltip="'Transpose rows and columns'"><i class="pointer icon-repeat"></i></a>
+        <span ng-show="panel.transpose_show != undefined && !transpose_show">
+            <a ng-click="flip()" bs-tooltip="'Transpose rows and columns'" class="btn btn-default btn-sm">
+                <i class="pointer icon-repeat"></i>
+            </a>
         </span>
 
-        <span ng-repeat="task in panelMeta.modals" class="row-button extra" ng-show="panel.spyable">
+        <span ng-repeat="task in panelMeta.modals" ng-show="panel.spyable">
             <span bs-modal="modal" data-template-url="{{task.partial}}" class="pointer">
                 <a title="Inspect" alt="Inspect" href="" bs-tooltip="Inspect" ng-class="task.icon"
-                    class="pointer"></a>
+                    class="pointer btn btn-default btn-sm"></a>
             </span>
         </span>
 
         <!-- bettermap fitBound action -->
-        <span class="row-button extra" ng-show="panel.fitBoundsAuto != undefined && !panel.fitBoundsAuto">
-            <a ng-click="fitBounds()"><i tooltip="'fit bound'" class="pointer icon-fire"></i></a>
+        <span ng-show="panel.fitBoundsAuto != undefined && !panel.fitBoundsAuto">
+            <a ng-click="fitBounds()" class="btn btn-default btn-sm"><i tooltip="'fit bound'" class="pointer icon-fire"></i></a>
         </span>
 
-        <span class="dropdown row-button extra" bs-tooltip="'Export'" data-placement="bottom"
+        <span class="dropdown" bs-tooltip="'Export'" data-placement="bottom"
             ng-show="panelMeta.exportfile">
             <span class="pointer" class="dropdown-toggle" data-toggle="dropdown">
                 <a title="Save" alt="Save" href="" class="icon-save" class="pointer"></a>
@@ -74,19 +73,23 @@
             </ul>
         </span>
 
-        <!-- <span ng-repeat="dropdown in panelMeta.dropdowns" class="row-button extra">
+        <span ng-hide="panel.draggable == false" class="panel-handle">
+            <span class="row-text pointer" bs-tooltip="'Drag here to move'" data-drag=true
+                data-jqyoui-options="{revert: 'invalid',helper:'clone'}"
+                jqyoui-draggable="{
+                    animate:false,
+                    mutate:false,
+                    index:{{$index}},
+                    onStart:'panelMoveStart',
+                    onStop:'panelMoveStop'
+                    }" ng-model="row.panels">{{panel.type}}
+            </span>
+        </span>
+
+        <!-- <span ng-repeat="dropdown in panelMeta.dropdowns">
             <span class="dropdown" data-placement="bottom" bs-tooltip="dropdown.description"><a href="#" class="dropdown-toggle" data-toggle="dropdown" bs-dropdown="dropdown.list"><i 
               'ng-class="dropdown.icon" class="pointer"></i></a></span>
           </span> -->
 
-        <span class="row-button extra" ng-show="panelMeta.loading == true">
-            <span>
-                <i class="icon-spinner icon-spin icon-large"></i>
-            </span>
-        </span>
-
-        <span class="row-text panel-title" ng-show="panel.title">
-            {{panel.title}}
-        </span>
-
+    </div>
 </div>
