Fixing information modal layout

--- a/src/app/partials/inspector.html
+++ b/src/app/partials/inspector.html
@@ -1,10 +1,7 @@
 <div class="modal" tabindex="0" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header pull-right">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3>Information</h3>
-            </div>
+            <div class="modal-header editor-title">Information</div>
             <div class="modal-body">
                 <div>
                     <div ng-show="!panel.show_help_message && !panel.show_queries"> Nothing to show here. Check your
