Fixing inspect tooltip

--- a/src/app/partials/panelgeneral.html
+++ b/src/app/partials/panelgeneral.html
@@ -18,7 +18,7 @@
     <div class="col-md-3" ng-show="!_.isUndefined(panel.spyable)">
       <div class="checkbox">
         <label><input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
-          Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
+          Inspect <i class="icon-question-sign" bs-tooltip data-html="1" data-title="Allow query reveal via <i class=icon-info-sign></i>"></i>
         </label>
       </div>
     </div>
