--- a/src/app/partials/panelHeader.html
+++ b/src/app/partials/panelHeader.html
@@ -1,8 +1,8 @@
 <div class="panel-heading clearfix">
-    <span class="row-text panel-title pull-left" ng-show="panel.title">
+    <span class="row-text pull-left" ng-show="panel.title">
         {{panel.title}}
     </span>
-    <div class="button-group pull-right">
+    <div class="pull-right">
         <span ng-show="panelMeta.loading == true">
             <span>
                 <i class="icon-spinner icon-spin icon-large"></i>
