--- a/src/app/partials/inspector.html
+++ b/src/app/partials/inspector.html
@@ -1,7 +1,7 @@
 <div class="modal" tabindex="0" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header editor-title">Information</div>
+            <div class="modal-header editor-title pull-right">Information</div>
             <div class="modal-body">
                 <div>
                     <div ng-show="!panel.show_help_message && !panel.show_queries"> Nothing to show here. Check your
