Fixing typeahead dropdown alignment

--- a/src/app/partials/dasheditor/solr.html
+++ b/src/app/partials/dasheditor/solr.html
@@ -24,7 +24,7 @@
         <div class="col-md-5">
             <h6>Collection Name</h6>
             <input type="text" class="form-control input-medium" name="solrCollection"
-                ng-model="dashboard.current.solr.core_name" placeholder="e.g. logs"
+                ng-model="dashboard.current.solr.core_name" placeholder="e.g. logs" data-container="body" 
                 bs-typeahead bs-options="collection for collection in dashboard.current.solr.core_list" required>
         </div>
     </div>
