--- a/src/app/partials/solrSettings.html
+++ b/src/app/partials/solrSettings.html
@@ -17,7 +17,7 @@
             <div class="col-md-5">
                 <label>Collection Name</label>
                 <input type="text" class="form-control input-large" name="solrCollection" ng-model="new.core_name"
-                       placeholder="e.g. logs" bs-typeahead bs-options="field for field in dashboard.current.solr.core_list" required>
+                       data-container="body" placeholder="e.g. logs" bs-typeahead bs-options="field for field in dashboard.current.solr.core_list" required>
             </div>
         </div>
         <div class="row">
