--- a/src/app/partials/roweditor/panels.html
+++ b/src/app/partials/roweditor/panels.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-      <h4>Panels <i class="icon-plus-sign link" bs-tooltip="'Add panel'" ng-click="editor.index = 2"></i></h4>
+      <h4>Panels <i class="icon-plus-sign link" bs-tooltip="'Add panel'" ng-click="rowControllerEditor.index = 2"></i></h4>
       <table class="table table-condensed table-striped">
         <thead>
           <th>Title</th>
