--- a/src/app/partials/dasheditor.html
+++ b/src/app/partials/dasheditor.html
@@ -1,22 +1,30 @@
 <div class="modal" tabindex="0" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="editor-title modal-header pull-right">Dashboard settings</div>
+            <div class="modal-header tab-content">
+                <div class="editor-title pull-right">Dashboard Settings</div>
+                <ul class="nav nav-tabs">
+                    <li ng-class="{active: dashControllerEditor.index == $index}" 
+                        ng-repeat="tab in editor_tabs">
+                            <a data-toggle="tab"
+                              ng-click="dashControllerEditor.index=$index">{{tab.title}}</a>
+                    </li>
+                </ul>
+            </div>
             <div class="modal-body">
-                <div bs-tabs data-bs-active-pane="editor.index">
-                    <div ng-repeat="tab in editor_tabs" data-title="{{tab.title}}" bs-pane>
-                        <div ng-include src="tab.src"></div>
+                <div ng-repeat="tab in editor_tabs">
+                    <div ng-include src="tab.src" 
+                        ng-show="dashControllerEditor.index == $index"></div>
                     </div>
-                </div>
             </div>
 
             <div class="modal-footer">
                 <button id="createRow" ng-click="add_row(dashboard.current,row); reset_row();" class="btn btn-success"
-                    ng-show="editor.index == 1">
+                    ng-show="dashControllerEditor.index == 1">
                     Create Row
                 </button>
                 <button type="button" class="btn btn-danger"
-                    ng-click="editor.index=0;$hide();reset_panel();dashboard.refresh()">
+                    ng-click="$hide();reset_panel();dashboard.refresh()">
                     Close
                 </button>
             </div>
