--- a/src/app/partials/dasheditor/controls.html
+++ b/src/app/partials/dasheditor/controls.html
@@ -74,12 +74,8 @@
             </div>
         </div>
         <div class="col-md-3" ng-show="dashboard.current.loader.load_elasticsearch">
-            <label>Solr list size
-                <tip>The maximum number of dashboards to show in the loading list for Solr stored dashboards
-                    under
-                    Load menu.
-                </tip>
-            </label>
+            <label>Solr list size</label>
+            <tip>The maximum number of dashboards to show in the loading list for Solr stored dashboards under Load menu.</tip>
             <input class="form-control input-mini" type="number"
                 ng-model="dashboard.current.loader.load_elasticsearch_size">
         </div>
